# PolysolveLib

./: LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  index.rst  usage.rst
polysolve/: __init__.py
tests/: test_quadratic.py
