[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Theakston", email = "oldcraftyhen@morlands.com"}]
requires-python = ">= 3.8"
readme = "README.md"
description = ""
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ['cowsay']
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/gorannilsen/PolysolveLib"
Repository="https://github.com/gorannilsen/PolysolveLib.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}

[project.optional-dependencies]
docs = ["sphinx",
   "sphinx_rtd_theme",
   "sphinx-autodoc-typehints",]
